# ReplitCodingPlatform3

./: .replit  AI_CONTEXT.md  HelloWorld.csproj  Program.cs  __init__.py  app.py  architectural_decisions.md  codemirror_analysis.json  compiler.py  compiler_service.py  compiler_simple.py  context_relevance.json  create_admin.py  create_test_user.py  database.py  development_patterns.md  extensions.py  forms.py  initialize_memory.py  integration_notes.md  logging.conf  main.py  memory_changes.json  memory_versions.json  models.py  optimization_analyzer.py  program  project_memory.md  pyproject.toml  replit.nix  security_recommendations.md  student_tracker.cs  student_tracker.csproj  test.cs  test.csproj  test_backup.py  test_compiler.py  test_compiler_performance.py  test_compiler_warmup.py  test_development_tools.py  (+13 more)
activity/: 2642.json  2643.json  2644.json  2645.json  2646.json  2647.json  2648.json  2649.json  2650.json  2651.json  2652.json  2653.json  2654.json  2655.json  2656.json  2657.json  2658.json  2659.json  2660.json  2661.json  2662.json  2663.json  2664.json
attached_assets/: Le-curriculum-de-lOntario-de-la-10e-a-la-12e-annee-Etudes-informatiques-2008-revise.txt  Pasted--Cours-pr-universitaire-11e-ann-eIntroduction-au-g-nie-informatique-11e-ann-e-cours-pr-universitai-1737151455616.txt  Pasted--Current-Focus-Optimizing-C-compilation-performance-by-implementing-caching-and-reducing-build-ov-1737641825749.txt  Pasted--M-Martin-diteur-de-Code-C-123456-include-iostream-int-main-std-cout-Bonjour-l-1735619868177.txt  Pasted--M-Martin-diteur-de-Code-C-123456-include-iostream-int-main-std-cout-Bonjour-l-1735619938611.txt  Pasted--using-System-using-System-Collections-Generic-using-System-Linq-class-Program-public-clas-1737414863139.txt  Pasted--using-System-using-System-Collections-Generic-using-System-Linq-class-Program-public-clas-1737416245370.txt  Pasted--using-System-using-System-Collections-Generic-using-System-Linq-class-Program-public-clas-1737429181955.txt  Pasted--using-System-using-System-Collections-Generic-using-System-Linq-class-Program-public-clas-1737435898926.txt  (+11 more)
(+762 files in other folders)
