
[project]
name = "repl-nix-codecrafthub"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-wtf>=1.2.2",
    "sqlalchemy>=2.0.36",
    "werkzeug>=3.1.3",
    "oauthlib>=3.2.2",
    "wtforms>=3.2.1",
    "trafilatura>=2.0.0",
    "flask-caching>=2.3.0",
    "flask-limiter>=3.9.2",
    "flask-compress>=1.17",
    "flask-migrate>=4.0.7",
    "argon2-cffi>=23.1.0",
    "argon2>=0.1.10",
    "pyotp>=2.9.0",
    "flask-cors>=5.0.0",
    "psutil>=6.1.1",
]
