
[project]
name = "repl-nix-codecrafthub"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login==0.6.3",
    "flask==3.0.0",
    "flask-sqlalchemy==3.1.1",
    "psycopg2-binary>=2.9.10",
    "flask-wtf==1.2.1",
    "sqlalchemy>=2.0.36",
    "werkzeug==3.0.1",
    "oauthlib>=3.2.2",
    "wtforms>=3.2.1",
    "trafilatura>=2.0.0",
    "flask-caching==2.1.0",
    "flask-limiter==3.5.0",
    "flask-compress==1.14",
    "flask-migrate==4.0.5",
    "argon2-cffi>=23.1.0",
    "argon2>=0.1.10",
    "pyotp>=2.9.0",
    "flask-cors==4.0.0",
    "psutil>=6.1.1",
    "numpy>=2.2.1",
    "scikit-learn>=1.6.0",
    "flask-session>=0.8.0",
    "python-socketio>=5.12.1",
    "eventlet>=0.38.2",
    "twilio>=9.4.2",
    "flask-mail>=0.10.0",
    "apscheduler>=3.11.0",
]
